# documentation_compliance_agent

./: .env.example  .gitignore  .pre-commit-config.yaml  ASSIGNMENT_ASSESSMENT.md  BEFORE_PUSH_SUMMARY.txt  CI_FIX_SUMMARY.md  COMPLETION_CHECKLIST.md  COMPLETION_SUMMARY.md  DEMO.py  DEMO_RUN.py  FINAL_SUMMARY.txt  GITHUB_ACTIONS_GUIDE.md  LICENSE  PROGRESS.md  PROJECT_COMPLETE.md  PUSH_STATUS.md  README.md  READY_TO_PUSH_100_PERCENT.md  STAGE10_COMPLETE.txt  STAGE3_COMPLETE.txt  STAGE9_COMPLETE.txt  TEMP_NOTE.txt  WEB_EXTRACTION_IMPLEMENTATION_GUIDE.md  app.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
config/: base_config.yaml  template_config.yaml  waiverpo_config.yaml
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  LLM_USAGE.md
scripts/: setup.bat  setup.sh
src/: __init__.py  main.py
src/agent/: __init__.py  compliance_agent.py  orchestrator.py
src/cli/: __init__.py  commands.py
src/core/: __init__.py  config.py  exceptions.py  logger.py  models.py
src/coverage/: __init__.py  models.py  reporter.py  storage.py  tracker.py
src/data/: __init__.py  models.py  schema.py  storage.py
src/pdf_ingestion/: __init__.py  chunk_generator.py  pdf_reader.py  text_processor.py
src/rag/: __init__.py  context.py  prompts.py  queries.py  retriever.py
src/reporting/: __init__.py  report_generator.py
src/utils/: __init__.py  helpers.py  retry.py  validators.py
src/vector_store/: __init__.py  embeddings.py  qdrant_client.py  schema.py
src/web_extraction/: __init__.py  auth_handler.py  extractor.py
templates/: index.html
tests/: __init__.py  conftest.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_cli.py  test_cli_commands.py  test_cli_simple.py  test_compliance_agent.py  test_config.py  test_coverage.py  test_data_models.py  test_embeddings.py  test_orchestrator.py  test_pdf_ingestion.py  test_rag.py  test_reporting.py  test_retry.py  test_validators.py
