[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "documentation-compliance-agent"
version = "1.0.0"
description = "Production-quality Documentation Compliance Agent that automatically checks web applications against their official documentation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Documentation Compliance Team"}
]
keywords = [
    "compliance",
    "documentation",
    "web-scraping",
    "rag",
    "playwright",
    "vector-database",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Text Processing",
]

dependencies = [
    "python-dotenv==1.0.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "pyyaml==6.0.1",
    "typer==0.9.0",
    "rich==13.7.0",
    "playwright==1.40.0",
    "aiohttp==3.9.1",
    "qdrant-client==2.7.0",
    "openai==1.6.0",
    "numpy==1.24.3",
    "pypdf==3.17.1",
    "PyPDF2==3.0.1",
    "pdfplumber==0.10.3",
    "pandas==2.1.3",
    "structlog==23.3.0",
    "pytest==7.4.3",
    "requests==2.31.0",
    "tenacity==8.2.3",
]

[project.optional-dependencies]
dev = [
    "black==23.12.0",
    "flake8==6.1.0",
    "isort==5.13.2",
    "mypy==1.7.1",
    "pylint==3.0.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "pytest-xdist==3.5.0",
    "ipython==8.18.1",
    "ipdb==0.13.13",
    "mkdocs==1.5.3",
    "mkdocs-material==9.5.3",
]

[project.urls]
Homepage = "https://github.com/example/documentation-compliance-agent"
Documentation = "https://github.com/example/documentation-compliance-agent/docs"
Repository = "https://github.com/example/documentation-compliance-agent.git"
"Bug Tracker" = "https://github.com/example/documentation-compliance-agent/issues"

[project.scripts]
compliance-agent = "src.main:app"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | tests/fixtures
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --tb=short"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "slow: slow tests",
    "e2e: end-to-end tests",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
precision = 2
show_missing = true
skip_covered = false

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "W0212",  # protected-access
]

[tool.pylint.format]
max-line-length = 100
